--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -10,6 +10,7 @@
   padding-inline: var(--cui-sidebar-occupy-start, 0) var(--cui-sidebar-occupy-end, 0);
   will-change: auto;
   @include transition(padding .15s);
+  background-color: rgb(255, 226, 172);
 
 }
 
@@ -33,11 +34,15 @@
     
     
   }
+  
 }
 
 .sidebar-toggler {
   margin-inline-start: auto;
   
+}
+.sidebar{
+  background-color: aqua;
 }
 
 .sidebar-narrow,
