--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -10,7 +10,7 @@
   padding-inline: var(--cui-sidebar-occupy-start, 0) var(--cui-sidebar-occupy-end, 0);
   will-change: auto;
   @include transition(padding .15s);
-  background-color: rgb(255, 226, 172);
+  background-color: #f2e6cf;
 
 }
 
@@ -64,6 +64,7 @@
 
   
 }
+
 
 @include color-mode(dark) {
 
