--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -10,7 +10,7 @@
   padding-inline: var(--cui-sidebar-occupy-start, 0) var(--cui-sidebar-occupy-end, 0);
   will-change: auto;
   @include transition(padding .15s);
-  background-color: #f2e6cf;
+  background-color: #f8f3ea;
 
 }
 
@@ -72,3 +72,4 @@
     --cui-footer-bg: var(--cui-body-bg);
   }
 }
+
